--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<title>Subha</title>
-</head>
-<body style="background-color: pink">
-	<center>Hi this is my first page</center>
-	<p style="color: blue">This is my first paragraph </p>
-	<p><marquee direction="down">This is my second paragraph </marquee></p>
+</head>	<p><marquee direction="down">This is my second paragraph </marquee></p>
 	<b>Hi i'm <i>Subhashree Rout</i></b>
 	<img src="image/photo.jpeg" height="300" width="200"></img> <button> Look at this</button>
+<p><center>Hello</center></p>
+<p><center>Subhashree</center></p>
+<link rel="stylesheet href"="style.css"=type"text/css">
+
+
+
+
+
+
+
+
+
 </body>
 </html>
