--- a/HTML/index4.html
+++ b/HTML/index4.html
@@ -1,2 +1,19 @@
-Test
-123
+<html>
+		<head>
+			<title>subha3</title>
+		</head>
+	<body> Hi
+			<video>
+				<p> <cite>Baagi</cite>Tiger</p>
+					<bdo dir="rtl">Awsm movie</bdo>
+					<!--This is comment-->
+				<p>Go to location after clicking button</p>
+				<button mclick="document location"=abc.html> Click here</button>
+				
+			<video width="300"height="200" controls>
+					<source src="baagi.mp4" type="video/mp4">
+					<source src="baagi.ogg" type="video/ogg">
+			</video>
+
+	</body>
+</html>
